# Schema-Auth-API

./: .gitignore  README.md  pyproject.toml
app/: auth_user.py  depends.py  main.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: 11d4a5849c5d_add_users_table.py
